--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
-    "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-circular-progressbar": "^2.0.4",
@@ -16,6 +15,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "sass": "^1.49.8",
     "scss": "^0.2.4",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
