--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-audio-player": "^0.17.0",
     "react-bootstrap": "^2.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-player": "^2.9.0",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
